--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<br>
 	<textarea readonly id="pet-graphic"></textarea>
 	<br>
+	</div>
 	Life: <span id="pet-life"></span>
 	<br>
 	Hunger: <span id="pet-hunger"></span> 
